# traffic-metry

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  commit_message.txt  deploy.sh  docker-compose.yml  main.py  pyproject.toml
backend/: Dockerfile  __init__.py  api_models.py  api_server.py  async_components.py  background_processor.py  camera_stream.py  candidate_saver.py  config.py  database.py  detection_models.py  detector.py  direction_analyzer.py  event_publisher.py  journey_manager.py  processor.py  tracker.py  vehicle_events.py
docs/: CALIBRATION.md  DETECTION.md
frontend/: index.html  style.css
frontend/js/: main.js  vehicle_renderer.js  websocket_client.js
nginx/: nginx.conf
scripts/: calibrate.py  dev_server.py  diagnostics_viewer.py  diagnostics_viewer_old.py  export_model.py  test_camera.py
scripts/viewer_components/: __init__.py  renderer.py  state.py  threads.py  utils.py
tests/: __init__.py  conftest.py
tests/backend/: test_camera_stream.py  test_config.py  test_config_roi.py  test_detection_models.py  test_detector.py
tests/scripts/: test_calibrate.py
